--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "@svgr/cli": "^4.3.2",
     "expo": "^34.0.1",
+    "expo-constants": "~6.0.0",
+    "expo-image-picker": "~6.0.0",
+    "expo-permissions": "~6.0.0",
     "global": "^4.4.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "npx": "^10.2.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-image-base64": "^0.1.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-router-flux": "^4.0.6",
-    "react-native-svg": "^9.9.4",
+    "react-native-svg": "~9.5.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4"
   },
